--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,7 @@
 
 .buttonSection {
     background-color: black;
+    width: 300px;
     height: 300px;
     text-align: center;
     align-items: center;
