--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -71,15 +71,16 @@
 
 .items {
     display: flex;
-    padding-top: 90px;
-    justify-content: space-around;
-    margin: 60px;
-    margin-right: 20px;
+    padding-top: 20px;
+    justify-content: space-evenly;
+    margin: 20px;
+    margin-right: 10px;
 }
 
 .buttonSection {
     background-color: black;
     height: 300px;
+    width: 300px;
     text-align: center;
     align-items: center;
     border-radius: 10px;
@@ -158,7 +159,8 @@
 }
 
 .box-info h3 {
-    font-size: 12px;
+    font-size: 10px;
+    font-weight: 300;
     margin-top: 20px;
 }
 
