--- a/styles/style.css
+++ b/styles/style.css
@@ -223,7 +223,7 @@ footer hr {
 }
 
 
-@media screen and (max-width: 576px) {
+@media screen and (min-width: 320px) and (max-width: 576px) {
     body{
         align-items: center;
     }
